dev/test_programs/INVALID/group12/scan_parse_errors/while_error.go
// no while in go

package main

func main() {
	i:=2
	while i<5 {
		i++
	}
}
